[package]
name = "chitchat"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[dependencies]
tauri = { version = "1.4", features = ["api-all", "wry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.5"
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["metal"] }
rand = "0.8.5"
lazy_static = "1.4.0"
anyhow = "1.0.71"
reqwest = { version = "0.11.17", features = ["stream"] }
futures-util = "0.3.28"
bytesize = { version = "1.1.0", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "fmt", "env-filter"] }
tracing-appender = "0.2.2"
tauri-plugin-aptabase = "0.3.1"
#[cfg(target_os = "macos")]
cocoa = "0.24.1"

[features]
analytics = []
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
